prometheus/overlays/prod/prometheus/patches/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-tls
spec:
  ports:
  - name: prometheus
    port: 443
    targetPort: 8443
