prometheus/overlays/prod/prometheus/patches/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
spec:
  tls:
    termination: reencrypt
